[project]
name = "starmap"
version = "0.1.0"
description = "Mapping star coordinates to x and y pixels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "line-profiler>=5.0.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
